--- a/Contact.html
+++ b/Contact.html
@@ -48,7 +48,7 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container mb-5">
       <img src="img/backgorund-contact.jpg" class="image-background-contact" />
       <div class="row">
         <div class="col-lg-6 col-sm-12 mt-4">
@@ -72,53 +72,40 @@
             ></iframe>
           </div>
         </div>
-        <div class="col-lg-6 col-sm-12 contact-box p-5 mt-5">
-          <h2 class="">Get in Touch</h2>
-          <form>
-            <div class="form-group mt-4">
-              <input
-                type="text"
-                class="form-control border-radius-contact"
-                name=""
-                value=""
-                placeholder="Name"
-              />
-            </div>
-            <div class="form-group mt-3">
-              <input
-                type="email"
-                class="form-control border-radius-contact"
-                name=""
-                value=""
-                placeholder="E-mail"
-              />
-            </div>
-            <div class="form-group mt-3">
-              <input
-                type="tel"
-                class="form-control border-radius-contact"
-                name=""
-                value=""
-                placeholder="Phone"
-              />
-            </div>
-            <div class="form-group mt-3">
-              <textarea
-                class="form-control border-radius-contact"
-                name=""
-                rows="3"
-                placeholder="Message"
-              ></textarea>
-            </div>
-            <div class="text-center">
-              <button class="btn btn-primary mt-3" type="submit" name="button">
-                <i class="fa fa-paper-plane-o" aria-hidden="true"></i> Submit
-              </button>
-            </div>
-          </form>
+        <div class="col-lg-6 col-sm-12 contact-box p-4 mt-5">
+          <h2 class="text-center">Get in Touch</h2>
+          <script src="https://sheetdb.io/s/f/w8c0hw047uqm7.js"></script>
         </div>
       </div>
     </div>
+
+    <footer class="main-footer text-white text-center text-lg-start">
+      <div class="container p-5">
+        <div class="row">
+          <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Financial Education</h5>
+            <p>
+              Improving financial literacy is crucial for making informed
+              decisions about money. Understanding concepts like budgeting,
+              saving, and investing can lead to a more secure financial future.
+            </p>
+          </div>
+          <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Finance Awareness</h5>
+            <p>
+              Stay updated with the latest financial news and trends. Being
+              aware of financial opportunities and risks can help you make
+              better financial choices and achieve your goals.
+            </p>
+          </div>
+        </div>
+      </div>
+      <hr style="color: aliceblue" />
+      <div class="text-center p-3 footer-text">
+        © 2024 Copyright:
+        <a class="text-body" href="#">Scorpions</a>
+      </div>
+    </footer>
     <script src="js/piechart.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
