--- a/Contact.html
+++ b/Contact.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <nav class="navbar mb-5 navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar mb-5 navbar-shadow navbar-expand-lg bg-body-tertiary">
       <div class="container">
-        <a class="navbar-brand" href="#">logo</a>
+        <a class="navbar-brand" href="#"><img src="logo.png" alt="logo"></a>
         <button
           class="navbar-toggler btn-close-danger"
           type="button"
@@ -26,15 +26,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item me-5">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="homepage.html">Home</a>
             </li>
             <li class="nav-item me-5">
-              <a class="nav-link active" aria-current="page" href="#"
+              <a class="nav-link active" aria-current="page" href="investment.html"
                 >Investment</a
               >
             </li>
             <li class="nav-item me-5">
-              <a class="nav-link active" aria-current="page" href="#"
+              <a class="nav-link active" aria-current="page" href="expenses.html"
                 >Expenses</a
               >
             </li>
@@ -43,6 +43,9 @@
                 >Contact</a
               >
             </li>
+            <li>
+              <input id="logOut" type="button" class="btn-primary btn" value="Log Out">
+          </li>
           </ul>
         </div>
       </div>
@@ -109,5 +112,7 @@
     <script src="js/piechart.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
+    <script type="module" src="app.js"></script>
+
   </body>
 </html>
