--- a/expenses.html
+++ b/expenses.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <nav class="navbar mb-5 navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar mb-5 navbar-shadow navbar-expand-lg bg-body-tertiary">
       <div class="container">
-        <a class="navbar-brand" href="#">logo</a>
+        <a class="navbar-brand" href="#"><img src="logo.png" alt="logo"></a>
         <button
           class="navbar-toggler btn-close-danger"
           type="button"
@@ -33,10 +33,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item me-5">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="homepage.html">Home</a>
             </li>
             <li class="nav-item me-5">
-              <a class="nav-link active" aria-current="page" href="#"
+              <a class="nav-link active" aria-current="page" href="index.html"
                 >Investment</a
               >
             </li>
@@ -46,10 +46,13 @@
               >
             </li>
             <li class="nav-item me-5">
-              <a class="nav-link active" aria-current="page" href="#"
+              <a class="nav-link active" aria-current="page" href="Contact.html"
                 >Contact</a
               >
             </li>
+            <li>
+              <input id="logOut" type="button" class="btn-primary btn" value="Log Out">
+          </li>
           </ul>
         </div>
       </div>
@@ -152,7 +155,7 @@
     <div class="box">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="box-part text-center">
               <i class="fab fa-connectdevelop fa-4x"></i>
 
@@ -198,7 +201,7 @@
             <!-- modal  -->
           </div>
 
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="box-part text-center">
               <i class="fas fa-clipboard fa-3x mb-3"></i>
               <div class="title">
@@ -246,7 +249,7 @@
             </div>
             <!-- modal  -->
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="box-part text-center">
               <i class="fas fa-users fa-4x"></i>
               <div class="title">
@@ -326,5 +329,7 @@
     <script src="js/yearlyChart.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
+    <script type="module" src="app.js"></script>
+
   </body>
 </html>
