--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Finance App - Login & Signup</title>
+    <title>Finance Buddy - signUp</title>
+    <link rel="icon" href="logo.png">
+    
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
