--- a/expenses.html
+++ b/expenses.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Manage Karo</title>
+    <title>Finance Buddy</title>
+    <link rel="icon" href="logo.png" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link
       rel="stylesheet"
@@ -16,9 +17,9 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <nav class="navbar mb-5 navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar mb-5 navbar-shadow navbar-expand-lg bg-body-tertiary">
       <div class="container">
-        <a class="navbar-brand" href="#">logo</a>
+        <a class="navbar-brand" href="#"><img src="logo.png" alt="logo" /></a>
         <button
           class="navbar-toggler btn-close-danger"
           type="button"
@@ -33,10 +34,21 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item me-5">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="homepage.html"
+                >Home</a
+              >
+            </li>
+
+            <li class="nav-item me-5">
+              <a class="nav-link active" aria-current="page" href="blogs.html"
+                >Blog</a
+              >
             </li>
             <li class="nav-item me-5">
-              <a class="nav-link active" aria-current="page" href="#"
+              <a class="nav-link active" aria-current="page" href="index.html"
                 >Investment</a
               >
             </li>
@@ -46,9 +58,17 @@
               >
             </li>
             <li class="nav-item me-5">
-              <a class="nav-link active" aria-current="page" href="#"
+              <a class="nav-link active" aria-current="page" href="Contact.html"
                 >Contact</a
               >
+            </li>
+            <li>
+              <input
+                id="logOut"
+                type="button"
+                class="btn-success btn"
+                value="Log Out"
+              />
             </li>
           </ul>
         </div>
@@ -103,7 +123,7 @@
                 required
               />
             </div>
-            <button type="submit" class="btn btn-primary">Add Expense</button>
+            <button type="submit" class="btn btn-success">Add Expense</button>
           </form>
         </div>
         <div class="col-lg-6 col-sm-12">
@@ -152,7 +172,7 @@
     <div class="box">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="box-part text-center">
               <i class="fab fa-connectdevelop fa-4x"></i>
 
@@ -198,7 +218,7 @@
             <!-- modal  -->
           </div>
 
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="box-part text-center">
               <i class="fas fa-clipboard fa-3x mb-3"></i>
               <div class="title">
@@ -246,7 +266,7 @@
             </div>
             <!-- modal  -->
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="box-part text-center">
               <i class="fas fa-users fa-4x"></i>
               <div class="title">
@@ -326,5 +346,6 @@
     <script src="js/yearlyChart.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
