--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div id="google-signin">
            
-            <img id="google-login" src="img/google.png" alt="goog;e-logo"> <p>  Sign in with Google </p> 
+            <img id="google-login" src="signin.png" alt="goog;e-logo">
         </div> 
     </div>
     <script type="module" src="js/login.js">
