--- a/blogs.html
+++ b/blogs.html
@@ -65,7 +65,7 @@
               >
             </li>
             <li class="nav-item me-5">
-              <a class="nav-link active" aria-current="page" href="#"
+              <a class="nav-link active" aria-current="page" href="contact.html"
                 >Contact</a
               >
             </li>
