--- a/homepage.html
+++ b/homepage.html
@@ -105,10 +105,9 @@
       </div>
     </div>
 
-    <div class="container" style="margin-top: 95px">
+    <div class="container mt-5">
       <div class="row">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-6 col-sm-12">
+        <div class="col-lg-6 col-sm-12 pie-chart-box">
           <div class="piechart-main">
             <div>
               <h2>Where Should you Invest?</h2>
@@ -116,28 +115,251 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3"></div>
+        <div class="col-lg-6 p-3 accordian-home">
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button
+                  class="accordion-button"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseOne"
+                  aria-expanded="true"
+                  aria-controls="collapseOne"
+                >
+                  Where should I invest for long-term growth?
+                </button>
+              </h2>
+              <div
+                id="collapseOne"
+                class="accordion-collapse collapse show"
+                aria-labelledby="headingOne"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body">
+                  For long-term growth, consider investing in diversified index
+                  funds or exchange-traded funds (ETFs) that track the
+                  performance of the overall stock market.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo"
+                  aria-expanded="false"
+                  aria-controls="collapseTwo"
+                >
+                  What are the best options for short-term investments?
+                </button>
+              </h2>
+              <div
+                id="collapseTwo"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body">
+                  For short-term investments, consider high-yield savings
+                  accounts, certificates of deposit (CDs), or short-term bond
+                  funds.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree"
+                  aria-expanded="false"
+                  aria-controls="collapseThree"
+                >
+                  Is it a good idea to invest in individual stocks?
+                </button>
+              </h2>
+              <div
+                id="collapseThree"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body">
+                  Investing in individual stocks can be risky, as the value of a
+                  single stock can be volatile. It's often recommended to
+                  diversify your investments to reduce risk.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingFour">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseFour"
+                  aria-expanded="false"
+                  aria-controls="collapseFour"
+                >
+                  How can I invest in real estate?
+                </button>
+              </h2>
+              <div
+                id="collapseFour"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingFour"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body">
+                  You can invest in real estate by purchasing physical
+                  properties, investing in real estate investment trusts
+                  (REITs), or crowdfunding platforms that pool funds for real
+                  estate projects.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingFive">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseFive"
+                  aria-expanded="false"
+                  aria-controls="collapseFive"
+                >
+                  Are there any tax-efficient investment options?
+                </button>
+              </h2>
+              <div
+                id="collapseFive"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingFive"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body">
+                  Yes, some tax-efficient investment options include investing
+                  in tax-advantaged accounts like 401(k)s, IRAs, and Health
+                  Savings Accounts (HSAs).
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingSix">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseSix"
+                  aria-expanded="false"
+                  aria-controls="collapseSix"
+                >
+                  How can I invest in international markets?
+                </button>
+              </h2>
+              <div
+                id="collapseSix"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingSix"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body">
+                  You can invest in international markets through global mutual
+                  funds, international ETFs, or by directly purchasing stocks of
+                  foreign companies.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingSeven">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseSeven"
+                  aria-expanded="false"
+                  aria-controls="collapseSeven"
+                >
+                  What are the risks associated with investing in
+                  cryptocurrencies?
+                </button>
+              </h2>
+              <div
+                id="collapseSeven"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingSeven"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body">
+                  Investing in cryptocurrencies carries risks such as price
+                  volatility, regulatory uncertainty, and security risks
+                  associated with digital wallets and exchanges.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingEight">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseEight"
+                  aria-expanded="false"
+                  aria-controls="collapseEight"
+                >
+                  How can I invest in commodities?
+                </button>
+              </h2>
+              <div
+                id="collapseEight"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingEight"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body">
+                  You can invest in commodities through commodity futures
+                  contracts, exchange-traded funds (ETFs), or by purchasing
+                  physical commodities such as gold or silver.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingNine">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseNine"
+                  aria-expanded="false"
+                  aria-controls="collapseNine"
+                >
+                  What are the advantages of investing in real estate?
+                </button>
+              </h2>
+              <div
+                id="collapseNine"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingNine"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body">
+                  Real estate investments can provide a steady income stream
+                  through rental payments, potential for long-term appreciation,
+                  and tax benefits such as depreciation deductions.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="container box-description-home my-5 col-lg-12 text-center">
-      <h2 class="hd2">
-        Join Us:
-        <span class="animate border-underline"
-          >Enhancing Financial Awareness Together</span
-        ><span class="typed-cursor" aria-hidden="true"></span>
-      </h2>
-      <p class="pg2">
-        Welcome to Finance Buddy, your trusted companion on the road to
-        financial success! Here, we're dedicated to providing you with the
-        tools, resources, and support you need to navigate the world of finance
-        with confidence. Whether you're looking to budget better, invest wisely,
-        or plan for your future, Finance Buddy is here to help. Join our
-        community of like-minded individuals who are committed to achieving
-        financial wellness and prosperity. From beginner tips to advanced
-        strategies, we've got you covered every step of the way. Let's embark on
-        this journey together and unlock the secrets to financial freedom!
-      </p>
-    </div>
+    <div
+      class="container box-description-home my-5 col-lg-12 text-center"
+    ></div>
     <div class="container my-5">
       <section class="articles">
         <article>
@@ -256,6 +478,44 @@
           </div>
         </article>
       </section>
+    </div>
+    <div class="container people-thoughts mt-lg-5 mb-lg-5">
+      <h2>Hear it from people</h2>
+      <p>See how people achieved financial peace of mind.</p>
+      <div class="row d-flex justify-content-between mt-4 p-2">
+        <div class="col-lg-3 ms-lg-5 testimonial mb-3">
+          <div class="card testimonials">
+            <div class="card-body">
+              <p class="card-text thoughts-card">
+                Finance is not about numbers but about your aspirations and
+                goals.
+              </p>
+              <strong>Nancy Duarte</strong>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 testimonials-yellow testimonial mb-3">
+          <div class="card yellow testimonials">
+            <div class="card-body">
+              <p class="card-text thoughts-card">
+                The stock market is a device for transferring money from the
+                impatient to the patient.
+              </p>
+              <strong>Warren Buffett </strong>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 testimonial mb-3 me-lg-5">
+          <div class="card testimonials">
+            <div class="card-body">
+              <p class="card-text thoughts-card">
+                The goal of retirement is to live off your assets-not on them.
+              </p>
+              <strong>Frank Eberhart</strong>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <footer class="main-footer text-white text-center text-lg-start">
       <div class="container p-5">
