--- a/expenses.html
+++ b/expenses.html
@@ -205,10 +205,10 @@
               </div>
               <div class="text">
                 <span>
-                  Highest percentage:
+                  Highest Category:
                   <span id="maxCategory"></span>
                 </span>
-                <p>Percentage: <span id="maxCategoryNumber"></span></p>
+                <p>Highest Amount: <span id="maxCategoryNumber"></span></p>
               </div>
 
               <a href="#" data-bs-toggle="modal" data-bs-target="#monthly"
@@ -341,7 +341,7 @@
 
     <script type="module" src="js/expenses.js"></script>
     <script src="js/weeklyChart.js"></script>
-    <script src="js/monthlyChart.js"></script>
+    <!-- <script type="module" src="js/monthlyChart.js"></script> -->
     <script src="js/yearlyChart.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
