--- a/blogs.html
+++ b/blogs.html
@@ -204,11 +204,8 @@
         </div>
       </div>
       <div class="news-letter mt-4 mb-3">
-        <h3 class="">Subscribe for daily news updates:</h3>
-        <form action="#" class="d-flex" method="Post">
-          <input type="text" class="p-2" name="text" placeholder="Enter Your Email Id">
-          <button type="button" class="btn btn-success"><i class="fas fa-paper-plane"></i></button>
-        </form>
+        <h3 class="mb-3">Subscribe for daily news updates:</h3>
+        <script src="https://sheetdb.io/s/f/xexgxa39s21ca.js"></script>
       </div>
 
     </div>
