--- a/investment.html
+++ b/investment.html
@@ -94,7 +94,7 @@
     </div>
     <div class="container">
       <div class="row investment-section">
-        <div class="col-lg-6 col-sm-12 investment-desc">
+        <div class="col-lg-6 col-sm-12 investment-desc text-white bg-success">
           <h2>SIPs</h2>
           <p class="investment-info">
             Systematic Investment Plans (SIPs) offer a disciplined and
@@ -189,7 +189,7 @@
 
     <div class="container">
       <div class="row investment-section">
-        <div class="col-lg-6 col-sm-12 order-lg-2 investment-desc">
+        <div class="col-lg-6 col-sm-12 order-lg-2 investment-desc text-white bg-success">
           <h2>Investing in Gold</h2>
           <p class="investment-info">
             Investing in gold can be a way to diversify a portfolio and hedge
@@ -233,7 +233,7 @@
 
     <div class="container">
       <div class="row investment-section">
-        <div class="col-lg-6 col-sm-12 investment-desc">
+        <div class="col-lg-6 col-sm-12 investment-desc text-white bg-success">
           <h2>Fixed deposits (FDs)</h2>
           <p class="investment-info">
             Fixed deposits (FDs) are a popular investment option offered by
